--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -6,14 +6,14 @@
     width: 100%;
     max-width: 1170px;
     margin: 0 auto;
-    padding-left: 15px;
-    padding-right: 15px;
+    //padding-left: 15px;
+    //padding-right: 15px;
 }
 
 .container-fluid {
     width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
+    //padding-left: 15px;
+    //padding-right: 15px;
 }
 
 .row {
