--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,3 +2,115 @@
 @import "mixins";
 @import "normalize";
 @import "layout";
+
+//MAIN WRAPPER
+body {
+    font-family: 'Roboto', 'Arial', sans-serif;
+}
+.main-wrapper {
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
+}
+.sidebar {
+    max-width: 188px;
+    width: 100%;
+    height: 1724px;
+    background-color: #191919;
+    float: left;
+}
+.main-container {
+    max-width: 1092px;
+    width: 100%;
+    height: 1724px;
+    background-color: #f5f5f2;
+    float: left;
+}
+.head {
+    height: 60px;
+    width: 100%;
+    background-color: #ffffff;
+    border-bottom: 1px solid #e3e3e3;
+}
+.wrapper {
+    width: 1056px;
+    height: 798px;
+    margin: 0 auto;
+    margin-top: 18px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    background-color: #ffffff;
+}
+// SECTION SIDEBAR
+.logo {
+    margin: 18px 0 20px 20px;
+}
+.hamburger {
+    margin: 23px 18px 0 0;
+    float: right;
+}
+.list {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    border-bottom: 1px solid #333333;
+    padding-bottom: 41px;
+}
+.list__element:hover {
+    border-left: 4px solid #f58220;
+    background-color: #282828;
+}
+.list__element:hover .list__icon {
+    margin-left: 16px;
+    width: 0.8em;
+}
+.list__link {
+    text-decoration: none;
+    color: #818181;
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 42px;
+}
+.list__icon {
+    width: 0.8em;
+    margin-left: 20px;
+    margin-right: 13px;
+    line-height: 42px;
+}
+.sidebar__title { 
+    display: inline-block;
+    font-family: 'Roboto';  
+    color: #808080;    
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 42px;
+    text-transform: uppercase;
+    letter-spacing: -0.28px;
+    margin-top: 28px; 
+    margin-left: 20px;
+    margin-bottom: 0;
+}
+.sidebar__person {
+    position: relative;
+    height: 43px;
+    margin: 0;
+    padding: 0;
+}
+.sidebar__image {
+    margin-left: 20px;    
+}
+.sidebar__image-online {
+    position: absolute;
+    left: 50px;   
+}
+.sidebar__name {   
+    color: #56819f;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-weight: 300;
+    line-height: 42px;
+    float: right;
+    margin-right: 54px;
+    padding: 0;
+    
+}
+
