--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -47,10 +47,10 @@
   @include grid('md');
 }
 
-@media(min-width: 992px) {
+@media(max-width: 992px) {
   @include grid('lg');
-}
+  }
 
-@media(min-width: 1200px) {
+@media(max-width: 1200px) {
   @include grid('xl');
 }
