--- a/sass/style.scss
+++ b/sass/style.scss
@@ -33,49 +33,49 @@ body {
     float: right;
     display: none;
 }
-.list {
+.menu__list {
     list-style-type: none;
     margin: 0;
     padding: 0;
     border-bottom: 1px solid #333333;
     padding-bottom: 41px;
 }
-.list__element:hover {
+.menu__element:hover {
     border-left: 4px solid #f58220;
     background-color: #282828;
 }
-.list__element--active {
+.menu__element--active {
     border-left: 4px solid #f58220;
     background-color: #282828;
 }
-.list__link--active {
+.menu__link--active {
     text-decoration: none;
     color: #ffffff;
     font-size: 14px;
     font-weight: 300;
     line-height: 42px;
 }
-.list__icon--active {
+.menu__icon--active {
     width: 0.8em;
     margin-left: 16px;
     margin-right: 13px;
     line-height: 42px;
 }
-.list__element:hover .list__icon {
+.menu__element:hover .list__icon {
     margin-left: 16px;
     width: 0.8em;
 }
-.list__element:hover .list__link {
+.menu__element:hover .list__link {
     color: #ffffff;
 }
-.list__link {
+.menu__link {
     text-decoration: none;
     color: #818181;
     font-size: 14px;
     font-weight: 300;
     line-height: 42px;
 }
-.list__icon {
+.menu__icon {
     width: 0.8em;
     margin-left: 20px;
     margin-right: 13px;
